<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".ui.detail.DetailActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/content_detail"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/image_poster"
            android:layout_width="200dp"
            android:layout_height="300dp"
            android:src="@color/yellow"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/tv_title"
            style="@style/TextLargeBold"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:gravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/image_poster"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/lbl_title" />

        <TextView
            android:id="@+id/tv_tagline"
            style="@style/TextItalic"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:gravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/image_poster"
            app:layout_constraintTop_toBottomOf="@+id/tv_title"
            tools:text="@string/lbl_tagline" />

        <!--  Rating  -->
        <TextView
            android:id="@+id/label_rating"
            style="@style/DetailLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="20dp"
            android:gravity="center_vertical"
            android:text="@string/lbl_rating"
            app:layout_constraintStart_toEndOf="@+id/image_poster"
            app:layout_constraintTop_toBottomOf="@+id/tv_tagline" />

        <TextView
            android:id="@+id/tv_rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="16dp"
            android:drawablePadding="3dp"
            android:gravity="center_vertical"
            app:drawableStartCompat="@drawable/ic_star_yellow"
            app:layout_constraintStart_toEndOf="@+id/label_rating"
            app:layout_constraintTop_toBottomOf="@+id/tv_tagline"
            tools:text="@string/lbl_rating" />

        <!--  Release  -->
        <TextView
            android:id="@+id/lbl_release"
            style="@style/DetailLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/lbl_release"
            app:layout_constraintStart_toEndOf="@+id/image_poster"
            app:layout_constraintTop_toBottomOf="@id/tv_rating" />

        <TextView
            android:id="@+id/tv_release"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="5dp"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/image_poster"
            app:layout_constraintTop_toBottomOf="@id/lbl_release"
            tools:text="@string/lbl_release" />

        <!--  Genre  -->
        <TextView
            android:id="@+id/lbl_genre"
            style="@style/DetailLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/lbl_genre"
            app:layout_constraintStart_toEndOf="@+id/image_poster"
            app:layout_constraintTop_toBottomOf="@id/tv_release" />

        <TextView
            android:id="@+id/tv_genre"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="5dp"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/image_poster"
            app:layout_constraintTop_toBottomOf="@id/lbl_genre"
            tools:text="@string/lbl_genre" />

        <!--  Overview  -->
        <TextView
            android:id="@+id/lbl_overview"
            style="@style/DetailLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/lbl_overview"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/image_poster" />

        <TextView
            android:id="@+id/tv_overview"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="5dp"
            android:scrollbars="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/lbl_overview"
            app:layout_constraintVertical_bias="0.0"
            tools:text="@string/lbl_overview" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_favorite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/add_fav"
            android:elevation="8dp"
            android:src="@drawable/ic_favorite_border_yellow"
            app:backgroundTint="@color/dark_blue"
            app:layout_constraintEnd_toEndOf="@+id/image_poster"
            app:layout_constraintTop_toTopOf="@+id/image_poster" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>