<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_movie">

    <fragment
        android:id="@+id/navigation_movie"
        android:name="com.katherineryn.motv3.ui.movie.MovieFragment"
        android:label="@string/title_movie"
        tools:layout="@layout/fragment_movie" />

    <fragment
        android:id="@+id/navigation_tvshow"
        android:name="com.katherineryn.motv3.ui.tvshow.TvShowFragment"
        android:label="@string/title_tvshow"
        tools:layout="@layout/fragment_tvshow" />

    <fragment
        android:id="@+id/navigation_favorite"
        android:name="com.katherineryn.motv3.ui.favorite.FavoriteFragment"
        android:label="@string/title_favorite"
        tools:layout="@layout/fragment_favorite" />
</navigation>